# HyperNovaLabsTechnicalTest

./: .gitignore  README.md  docker-compose.debug.yml  docker-compose.yml
HyperNovaLabs/: CMakeLists.txt  Dockerfile
HyperNovaLabs.ExpenseReportDb/: HyperNovaLabs.ExpenseReportDb.sqlproj
HyperNovaLabs/CMake/: FindNoesisGUI.cmake  GenerateBin2hFile.cmake  SetTargetProperties.cmake  TargetCompileDefinitions.cmake  TargetCompileOptions.cmake  TargetIncludeDirectories.cmake
HyperNovaLabs/Data/: App.xaml  App.xaml.cs  ExpenseReport.csproj  ExpenseReport.sln  MainWindow.xaml  MainWindow.xaml.cs  packages.config
HyperNovaLabs/Data/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
HyperNovaLabs/Data/Theme/: NoesisTheme.Styles.xaml
HyperNovaLabs/Libs/NoesisGUI/: CMakeLists.txt
HyperNovaLabs/Libs/NoesisGUI/App/ApplicationLauncher/Include/NsApp/: Application.h  MessageBox.h  Window.h
HyperNovaLabs/Libs/NoesisGUI/App/Interactivity/Include/NsApp/: DataEventTrigger.h  LoadContentAction.h  MediaActions.h  MouseDragElementBehavior.h  SetFocusAction.h
HyperNovaLabs/Libs/NoesisGUI/App/MediaElement/Include/NsApp/: MediaElement.h  MediaPlayer.h
HyperNovaLabs/Libs/NoesisGUI/App/Theme/Data/Include/NsTheme/: NoesisTheme.Styles.xaml.bin.h
HyperNovaLabs/Libs/NoesisGUI/App/Theme/Data/Include/NsTheme/ApplicationLauncher/: MessageBox.xaml.bin.h
HyperNovaLabs/Libs/NoesisGUI/Include/: NoesisLicense.h  NoesisPCH.h
HyperNovaLabs/Libs/NoesisGUI/Include/NsCore/: CpuProfiler.h  PlatformSettings.h  TypePropertyUtil.h  Vector.inl
HyperNovaLabs/Libs/NoesisGUI/Include/NsGui/: BaseBinding.h  CollectionView.h  ComboBox.h  DynamicTextureSource.h  FormattedText.h  FrameworkElement.h  GradientBrush.h  IView.h  IntegrationAPI.h  ItemCollection.h  ListBox.h  ListBoxItem.h  Mouse.h  UIElement.h  UIElementEvents.h  UIElementEvents.inl  XamlContextProvider.h
HyperNovaLabs/Libs/NoesisGUI/Include/NsMath/: Vector.h  Vector.inl
HyperNovaLabs/Sources/: Main.cpp
HyperNovaLabs/Templates/: index.html.in
HyperNovaLabsBackend/: HyperNovaLabsBackend.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
HyperNovaLabsBackend/HyperNovaLabs.Api/: Dockerfile  HyperNovaLabs.Api.csproj  Program.cs  Startup.cs  WeatherForecast.cs  appsettings.json
HyperNovaLabsBackend/HyperNovaLabs.Api/Controllers/: WeatherForecastController.cs
HyperNovaLabsBackend/HyperNovaLabs.Api/Extensions/: CommonExtensions.cs
HyperNovaLabsBackend/HyperNovaLabs.Api/Migrations/: 20210721055509_InitialCreate.Designer.cs  20210721055509_InitialCreate.cs  20210721061509_EmployeeSeedData.Designer.cs  20210721061509_EmployeeSeedData.cs  20210721174409_SeedData.Designer.cs  20210721174409_SeedData.cs  ExpenseReportContextModelSnapshot.cs
HyperNovaLabsBackend/HyperNovaLabs.Api/Models/: Bill.cs  BillDescription.cs  Data.cs  Employee.cs  ExpenseReportContext.cs
HyperNovaLabsBackend/HyperNovaLabs.Api/Properties/: launchSettings.json
HyperNovaLabsBackend/HyperNovaLabs.Api/Services/: EmployeeService.cs  ExpenseReportService.cs
HyperNovaLabsBackend/Proto/: EmployeeService.proto  ExpenseReport.proto  ExpenseReportService.proto
HyperNovaLabsBackend/Proto/model/: Bill.proto  BillDescription.proto
HyperNovaLabsNativeBackend/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  checks.json
HyperNovaLabsNativeBackend/Backend/: CMakeLists.txt
HyperNovaLabsNativeBackend/Backend/Includes/: EmployeeService.hpp  ExpenseReportService.hpp  Server.hpp
HyperNovaLabsNativeBackend/Backend/Sources/: EmployeeService.cpp  ExpenseReportService.cpp  Main.cpp  Server.cpp
HyperNovaLabsNativeBackend/CMake/: Common.cmake  ProtobufGenerateGrpcCpp.cmake
HyperNovaLabsNativeBackend/Common/Includes/: GrpcServerInfo.hpp  MockEmployeeStore.hpp
HyperNovaLabsNativeBackend/Database/: CMakeLists.txt
HyperNovaLabsNativeBackend/Docker/CMake/: Dockerfile
HyperNovaLabsNativeBackend/Docker/Grpc/: Dockerfile
HyperNovaLabsNativeBackend/Docker/SqlServer/: Dockerfile
HyperNovaLabsNativeBackend/Protos/: CMakeLists.txt  EmployeeService.proto  ExpenseReportService.proto
HyperNovaLabsNativeBackend/Protos/Includes/: EmployeeService.grpc.pb.cc  EmployeeService.grpc.pb.h  EmployeeService.pb.cc  EmployeeService.pb.h  EmployeeService_mock.grpc.pb.h  ExpenseReportService.grpc.pb.cc  ExpenseReportService.grpc.pb.h  ExpenseReportService.pb.cc  ExpenseReportService.pb.h  ExpenseReportService_mock.grpc.pb.h
HyperNovaLabsNativeBackend/Protos/Includes/Models/: Bill.grpc.pb.cc  Bill.grpc.pb.h  Bill.pb.cc  Bill.pb.h  BillDescription.grpc.pb.cc  BillDescription.grpc.pb.h  BillDescription.pb.cc  BillDescription.pb.h  BillDescription_mock.grpc.pb.h  Bill_mock.grpc.pb.h  Employee.grpc.pb.cc  Employee.grpc.pb.h  Employee.pb.cc  Employee.pb.h  Employee_mock.grpc.pb.h
HyperNovaLabsNativeBackend/Protos/Includes/google/api/: annotations.grpc.pb.h  annotations_mock.grpc.pb.h  http.grpc.pb.h  http_mock.grpc.pb.h
HyperNovaLabsNativeBackend/Protos/Models/: Bill.proto  BillDescription.proto  Employee.proto
HyperNovaLabsNativeBackend/SqlClient/: CMakeLists.txt
HyperNovaLabsNativeBackend/SqlClient/Includes/: SqlClientFactory.hpp  SqlCommand.hpp  SqlConnection.hpp  SqlDataAdapter.hpp  SqlHeaders.hpp  SqlParameter.hpp
HyperNovaLabsNativeBackend/SqlClient/Sources/: SqlClientFactory.cpp  SqlCommand.cpp  SqlConnection.cpp  SqlDataAdapter.cpp  SqlParameter.cpp
HyperNovaLabsNativeBackend/Test/: CMakeLists.txt  DartConfiguration.tcl.in
HyperNovaLabsNativeBackend/Test/Backend/: CMakeLists.txt  EmployeeServiceClient.cpp  EmployeeServiceClient.hpp  EmployeeServiceClientTest.cpp  EmployeeServiceClientTest.hpp  Main.cpp
HyperNovaLabsNativeBackend/Test/SqlClient/: CMakeLists.txt
HyperNovaLabsNativeBackend/Test/SqlClient/SQLDataSources/: CMakeLists.txt
HyperNovaLabsNativeBackend/Test/SqlClient/SQLDriverConnect/: CMakeLists.txt
